Remove jvm flags which are not supprted in jdk11